--- a/lab5/nerdlets/my-nerdlet/styles.scss
+++ b/lab5/nerdlets/my-nerdlet/styles.scss
@@ -1,15 +1,24 @@
-.header{
+.header {
     text-align: center;
     margin: 5px 0;
 }
-.table{
-max-height: 400px;
-width: 100%;
-border: 1px solid #dedede;
-margin-bottom: 10px;
-overflow-y: scroll;
-    .table-data{
+.container {
+    max-height: 200px;
+    width: 100%;
+    overflow: scroll;
+}
+.table {
+    border: 1px solid #dedede;
+    margin-bottom: 10px;
+    .table-data {
         border: 1px solid #dedede;
-        padding: 5px 20px;
+        padding: 5px 10px;
     }
 }
+.centered {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-top: -50px;
+    margin-left: -100px;
+  }
