--- a/lab3/nerdlets/my-nerdlet/styles.scss
+++ b/lab3/nerdlets/my-nerdlet/styles.scss
@@ -9,10 +9,19 @@
     width: 100%;
     height: 300px;
 }
+.two-col-chart {
+    padding: 10px;
+    min-width: 29.5vw;
+    width: 100%;
+    height: 300px;
+}
+.side-col{
+    padding-top: 30px;
+}
 .gry, .gry-div {
     background: #ccc;
     height: 100px;
-    width: 24vw;
+    width: 25vw;
 }
 .dialog-headline{
     margin-bottom: 20px;
